2010-05-31  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Clean code and change
	the enable/disable groups functionalities. Now 
	the parameter is the name of the group.

2010-05-31  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Set the initial depth for
	  pandora_inhibit_alerts. Fixes bug #3008761.

2010-05-31  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Fixed typo error.

2010-05-27  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Added the 15 new functionalities
	to CLI

2010-05-26  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm: Added a function to get the id of a user
	  profile (needed by pandora_manage.pl).

2010-05-25  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm: Added a function to get the id of an action
	  (needed by pandora_manage.pl).

2010-05-25  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Tools.pm: Set a default verbosity level for logger().

2010-05-25  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm: Added get_agent_module_id to @EXPORT.

2010-05-25  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm: Added functions to get alert data (needed by
	  pandora_manage.pl).

2010-05-25  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm: Added functions to get the id of an OS, a
	  module and a group (needed by pandora_manage.pl).

	* lib/PandoraFMS/Core.pm: Removed tagente_estado.status from the
	  keep_alive_nd query.

2010-05-24  Sergio Martin <sergio.martin@artica.es>

	* util/plugin/snmp_process.pl: Changed the 
	value that change the status of the process
	from 2 to 1.

2010-05-20  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server.spec: Changed release number.

2010-05-20  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/postinst: fixed the linking the conf file.

2010-05-20  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server.spec: Removed unneeded symlinks.

2010-05-20  Ramon Novoa  <rnovoa@artica.es>
